# sparse_map

./: README.md
src/Auto-Complete-Graph/ACG_folder/: Optimized.rviz
src/Auto-Complete-Graph/config/nav/: global_costmap_params.yaml  local_costmap_params.yaml
src/Auto-Complete-Graph/include/auto_complete_graph/Localization/: AcgMclLocalization.hpp
src/Auto-Complete-Graph/launch/: hannover.launch
src/Auto-Complete-Graph/src/Localization/: acg_node_localization.cpp  graph_map_publisher_localization.cpp
src/graph_map_public/graph_map/: CMakeLists.txt  package.xml
src/graph_map_public/graph_map/launch/: 3d.rviz
src/ndt_core_public/: .gitlab-ci.yml  README.md
src/ndt_core_public/.gitlab-ci/: prepare.sh
src/ndt_core_public/ndt_core/: CHANGELOG.rst  package.xml
src/ndt_core_public/ndt_generic/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ndt_core_public/ndt_generic/src/: eigen_utils.cpp
src/ndt_core_public/ndt_map/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ndt_core_public/ndt_map/include/ndt_map/: lazy_grid.h  ndt_conversions.h  ndt_map.h
src/ndt_core_public/ndt_map/src/: lazy_grid.cpp  ndt_map.cpp  ndt_map_hmt.cpp
src/ndt_core_public/ndt_map/test/: simple_test.cpp
src/ndt_core_public/ndt_registration/: CHANGELOG.rst  package.xml
src/ndt_core_public/ndt_rviz/: CHANGELOG.rst  package.xml
src/ndt_core_public/ndt_rviz/src/: ndt_display.cpp
src/ndt_core_public/ndt_visualisation/: CHANGELOG.rst  package.xml
src/ndt_core_public/ndt_visualisation/include/ndt_visualisation/: ndt_viz.h
src/ndt_tools_public/: .gitlab-ci.yml  README.md
src/ndt_tools_public/.gitlab-ci/: prepare.sh  release.sh~
src/ndt_tools_public/ndt_feature_finder/: CHANGELOG.rst  package.xml
src/ndt_tools_public/ndt_fuser/: CHANGELOG.rst  package.xml
src/ndt_tools_public/ndt_fuser/src/: ndt_fuser_hmt.cpp
src/ndt_tools_public/ndt_localization/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ndt_tools_public/ndt_localization/include/ndt_localization/: 3d_particle_filter.hpp  ndt_histogram_2D.hpp  particle.hpp  particle_filter.hpp
src/ndt_tools_public/ndt_localization/src/: ndt_mcl_localization.cpp  ndt_mcl_localization_filter.cpp
src/ndt_tools_public/ndt_localization/src/ndt_localization/: 3d_particle_filter.cpp  ndt_histogram_2D.cpp  particle.cpp  particle_filter.cpp  particle_filter_HMT.cpp
src/ndt_tools_public/ndt_offline/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ndt_tools_public/ndt_offline/src/: mcl_offline.cpp
src/ndt_tools_public/ndt_tools/: CHANGELOG.rst  package.xml
src/velodyne/velodyne_driver/src/driver/: nodelet.cc
src/velodyne/velodyne_pointcloud/src/conversions/: cloud_nodelet.cc  ringcolors_nodelet.cc  transform_nodelet.cc
